[package]
name = "circularfft"
version = "0.1.0"
authors = ["Joel Bradshaw <cincodenada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
wav = "1.0.0"
inline-python = "0.7.1"
ordered-float = "2.8.0"
